feat: implement image storage services and migrate image urls to keys